chore: 下线upload服务
